@@ -559,6 +559,10 @@ void D_DoomMain(void)
     if (p) {
 		sysvideo.textured_spans = false;
 	}
+	p=M_CheckParm ("-overlay");
+    if (p) {
+		sysvideo.overlay = true;
+	}
 	p=M_CheckParm ("-yieldcpu");
     if (p && (p<myargc-1)) {
 		if (strcmp(myargv[p+1],"off")==0) {
